--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,3 +101,9 @@
 <block-ui>
 	<!-- Your app markup here -->
 </block-ui>
+
+
+
+<input type="text" #inputTarget />
+
+<button [ngxClipboard]="inputTarget">Copy</button>
