--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import '@angular/cdk/overlay-prebuilt.css';
+// @import './node_modules/@perfectmemory/ngx-contextmenu/src/assets/stylesheets/base.scss';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
