--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <app-ng-multi-select></app-ng-multi-select> -->
 
+<app-ag-grid></app-ag-grid>
 <!-- Context Menu  -->
 <app-context-menu1></app-context-menu1>
 
