--- a/src/app/ag-grid/ag-grid.component.html
+++ b/src/app/ag-grid/ag-grid.component.html
@@ -1,4 +1,8 @@
-<!-- <ag-grid-angular
-   [rowData]="rowData"
-   [columnDefs]="colDefs">
- </ag-grid-angular> -->
+<ag-grid-angular
+    style="width: 100%; height: 100%;"
+    [rowData]="rowData"
+    [columnDefs]="columnDefs"
+    [class]="themeClass"
+		[modules]="modules"
+    
+    ></ag-grid-angular>
