JWT example: not sure where it will be used

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-ng-multi-select></app-ng-multi-select> -->
-
+<app-jwt-example></app-jwt-example>
 <app-ag-grid></app-ag-grid>
 <!-- Context Menu  -->
 <app-context-menu1></app-context-menu1>
